--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: For-love-of-life-vol-2-of-2_65935
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 65935-h/images/cover.jpg
 creator:
   author:
     agent_name: Oliphant, Mrs. (Margaret)
@@ -17,6 +20,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/963
     wikipedia: https://en.wikipedia.org/wiki/Margaret_Oliphant_Oliphant
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/65935#For-love-of-life-vol-2-of-2
 gutenberg_issued: '2021-07-28'
 identifiers:
   gutenberg: '65935'
